fix: code line number not align

--- a/assets/_fonts.scss
+++ b/assets/_fonts.scss
@@ -34,6 +34,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: 'Roboto Mono', monospace;
-}
+// code {
+//   font-family: 'Roboto Mono', monospace;
+// }
